        Gets Iron Fist as second Ability

    Tropius:
        HP: 99->100
        Atk: 68->70
        Def: 83->85
        SpA: 72->80
        SpD: 87->90
        Spe: 51->55

    Chingling:
        Can also evolve at level 19

    Absol:
        Learns Spite by breeding

    Huntail:
        Holding a Deep Sea Tooth multiplies its Attack by 1.5
        Atk: 104->114

    Gorebyss:
        Holding a Deep Sea Scale multiplies its Defense by 1.5
        Atk: 84->94
        Learns Leech Life by TM

    Luvdisc:
        HP: 43->50
        SpA: 40->60
        Spd: 97->100

    Latios/Latias:
        Level up learnset slightly restructured to avoid a battle they where only have one attacking move

    Kyogre:
        Learns Origin Pulse at level 63 instead of level 1
        Learns Aurora Beam at level 1 instead of Body Slam
        Learns Surf at level 27 instead of Muddy Water
        Learns Thunder at level 81 instead of Double-Edge

    Groudon:
        Learns Precipice Blades at level 63 instead of level 1
        Learns Bulldoze at level 1 instead of Mud Shot
        Learns Solar Blade at level 81 instead of Solar Beam

    Rayquaza:
        Learns Fly at level 1 instead of level 63
        Learns Dragon Ascent at level 63 instead of level 1

NOTE: Nothing past here is in the main game
    Torterra:
        Learns Body Press and Zen Headbutt by TM (Teal Mask addition)
        Learns Grassy Glide by move tutor (Teal Mask addition)
        Learns Shell Smash after evolving

    Infernape:
        Learns Aura Sphere by TM (Teal Mask addition)

    Empoleon:
        Hidden Ability: Defiant->Competitive (Teal Mask change)

    Cranidos/Rampardos:
        Received Rock Head as a second ability

    Shieldon/Bastiodon:
        Received Rock Head as a second ability

    Riolu:
        Can also evolve at level 20

    Carracosta:
        Learns Body Press by TM

    Spritzee/Aromatisse:
        Gender Ratio: 50/50->25/75

    Dragapult:
        Learns Shadow Claw by TM